staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: riverside-frontend
spec:
  selector:
    app: riverside-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: riverside-backend
spec:
  selector:
    app: riverside-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: riverside-k8s-worker
spec:
  selector:
    app: riverside-k8s-worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: riverside-worker
spec:
  selector:
    app: riverside-worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
